Bug 1347518 - P1. Use SEI recovery point to mark keyframe. r=jesup

Some streams do not include any IDR frames. However, they do include SEI recovery point markers. We use those to mark keyframes.

MozReview-Commit-ID: IHfUx7fEgEJ